Remove unused user endpoints
