# frontend/src/openapi.json
@@ -243,96 +243,6 @@
         "security": [{ "OAuth2PasswordBearer": [] }]
       }
     },
-    "/user/{user_id}/code": {
-      "get": {
-        "tags": ["user"],
-        "summary": "Returns all Codes of the User",
-        "description": "Returns all Codes of the User with the given ID",
-        "operationId": "get_user_codes",
-        "parameters": [
-          { "required": true, "schema": { "title": "User Id", "type": "integer" }, "name": "user_id", "in": "path" }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "title": "Response User-Get User Codes",
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/CodeRead" }
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/HTTPValidationError" } } }
-          }
-        },
-        "security": [{ "OAuth2PasswordBearer": [] }]
-      }
-    },
-    "/user/{user_id}/memo": {
-      "get": {
-        "tags": ["user"],
-        "summary": "Returns all Memos of the User",
-        "description": "Returns all Memos of the User with the given ID",
-        "operationId": "get_user_memos",
-        "parameters": [
-          { "required": true, "schema": { "title": "User Id", "type": "integer" }, "name": "user_id", "in": "path" }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "title": "Response User-Get User Memos",
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/MemoRead" }
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/HTTPValidationError" } } }
-          }
-        },
-        "security": [{ "OAuth2PasswordBearer": [] }]
-      }
-    },
-    "/user/{user_id}/adocs": {
-      "get": {
-        "tags": ["user"],
-        "summary": "Returns all Adocs of the User",
-        "description": "Returns all Adocs of the User with the given ID",
-        "operationId": "get_user_adocs",
-        "parameters": [
-          { "required": true, "schema": { "title": "User Id", "type": "integer" }, "name": "user_id", "in": "path" }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "title": "Response User-Get User Adocs",
-                  "type": "array",
-                  "items": { "$ref": "#/components/schemas/AnnotationDocumentRead" }
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": { "application/json": { "schema": { "$ref": "#/components/schemas/HTTPValidationError" } } }
-          }
-        },
-        "security": [{ "OAuth2PasswordBearer": [] }]
-      }
-    },
     "/user/{user_id}/recent_activity": {
       "get": {
         "tags": ["user"],
